--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
         <a href="future.html">Future Plans</a>
     </div>
     <!-- Page content -->
+    
     <div class='main'>
-        <!-- <h1 align='center'>Welcome to My Website</h1> -->
+        <h1 align='center'>Welcome to My Website</h1>
         <div align='center'>
             <img src="image.jpg">
         </div>
         <p>Name: Israt Jahan Rani</p>
+        <p>Present & permanent address Narayanganj</p>
         <p>Date of Birth: 12 June 2001</p>
         <p>You can find different informations about me in this website.</p>
+        
     </div>
 </body>
 </html>
